aworking GCP/nvne-user-admin-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nvne-user-admin-service
  namespace: nvne
  labels:
    app: nvne-front
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8081
  selector:
    app: nvne-front
  type: ClusterIP
